--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "cartel": "tsx Sharding.ts"
   },
   "dependencies": {
-    "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.1",
     "@distube/deezer": "^1.0.0",
     "@distube/soundcloud": "^1.3.3",
@@ -20,7 +19,9 @@
     "ffmpeg-static": "^5.2.0",
     "js-yaml": "^4.1.0",
     "libsodium-wrappers": "^0.7.13",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.1",
+    "opusscript": "^0.1.1",
+    "prettier": "^3.3.1"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
